# contriboo-lib

./: .gitignore  pyproject.toml
examples/: get_total_commits_count_example.py
src/contriboo/: __init__.py  client.py  commit_counter.py  repository_name.py  settings.py
src/contriboo/integrations/git/: gateway.py
src/contriboo/integrations/github/: dto.py  requests_provider.py
src/contriboo/profile/: interfaces.py  models.py  service.py  types.py
tests/: test_client_api.py  test_commit_counter.py  test_git_gateway.py  test_profile_service.py  test_requests_provider.py  test_settings.py
