[project]
name = "contriboo"
version = "0.0.1"
description = "Library for assessment of the contribution of developers on GitHub"
readme = "README.md"
authors = [
  { name = "alchemmist", email = "anton.ingrish@gmail.com" },
  { name = "Alex Smirnov", email = "alekssmir411@gmail.com" },
  { name = "vitawild" },
]
requires-python = ">=3.12"
dependencies = [
  "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
